@@ -1,3 +1,6 @@
+<h5>2.0.3 Beta1</h5> [2025/10/23]
+- added new sorting for relations (goffy)
+
 <h5>2.0.2 Stable</h5> [2025/06/07]
 - last stable version for PHP 7 (goffy)
 
